# order-builder

./: docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  entrypoint-dev.sh  entrypoint-worker.sh  entrypoint.sh  gunicorn_config.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery.py  config.py  entrypoint-worker.sh  mail.py  tasks.py
backend/app/commands/: __init__.py  order_received.py  welcome.py
backend/app/graphql/: queries.graphql
backend/app/helpers/: common.py  filters.py  form.py
backend/app/mailers/: order_received.py
backend/app/models/: base.py  export.py  refresh_token.py  user.py
backend/app/models/shopify/: order.py  webhook.py
backend/app/routes/: __init__.py
backend/app/routes/v1/: __init__.py  auth.py  exports.py  front.py  health.py  orders.py  shopify.py
backend/app/schemas/: auth.py  export.py  front.py  order.py
backend/app/services/: auth.py  celery.py  shopify.py  storage.py
backend/app/templates/emails/: base.html  customer-order-approved.html  customer-order-ready.html  customer-order-revision.html  customer-order-update.html  login_otp.html  order-approved.html  (+2 more)
backend/app/validators/: file.py
backend/app/webhooks/: orders_create.py
backend/migrations/versions/: 0f4c23dc59da_added_order_item_other_details.py  5d8666b21ddd_added_pdf_and_gift_image.py  900a1ea64ec3_create_core_exports.py  af29180a524a_added_status_columns.py  c6bbcc1e6958_create_orders.py  cb57b94ed620_added_order_item_attachments.py  d52f986d3efd_initial.py
(+50 files in other folders)
